@@ -44,3 +44,47 @@
 {{ARTICLEPAGENAMEE}}
 
 {{DISPLAYTITLE:Magic_Words1}}
+
+{{PAGENAME:Template:Subpage/Child}}
+
+{{PAGENAMEE:Template:Subpage/Child}}
+
+{{BASEPAGENAME:Template:Subpage/Child}}
+
+{{BASEPAGENAMEE:Template:Subpage/Child}}
+
+{{SUBPAGENAME:Template:Subpage/Child}}
+
+{{SUBPAGENAMEE:Template:Subpage/Child}}
+
+{{NAMESPACE:Template:Subpage/Child}}
+
+{{NAMESPACEE:Template:Subpage/Child}}
+
+{{FULLPAGENAME:Template:Subpage/Child}}
+
+{{FULLPAGENAMEE:Template:Subpage/Child}}
+
+{{TALKSPACE:Template:Subpage/Child}}
+
+{{TALKSPACEE:Template:Subpage/Child}}
+
+{{SUBJECTSPACE:Template:Subpage/Child}}
+
+{{SUBJECTSPACEE:Template:Subpage/Child}}
+
+{{ARTICLESPACE:Template:Subpage/Child}}
+
+{{ARTICLESPACEE:Template:Subpage/Child}}
+
+{{TALKPAGENAME:Template:Subpage/Child}}
+
+{{TALKPAGENAMEE:Template:Subpage/Child}}
+
+{{SUBJECTPAGENAME:Template:Subpage/Child}}
+
+{{SUBJECTPAGENAMEE:Template:Subpage/Child}}
+
+{{ARTICLEPAGENAME:Template:Subpage/Child}}
+
+{{ARTICLEPAGENAMEE:Template:Subpage/Child}}
